--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -30,7 +30,7 @@
         <script type="text/javascript">
             $(function () {
                 let action = getUrlParameter('action');
-                let url = '/' + action + '/?' + window.location.search.substring(1);
+                let url = `/${action}/?${window.location.search.substring(1)}`;
 
                 $.get(url, function (data) {
                     $("#json").text(formatJSON(data));
